Created javascript attributes render and search

--- a/views/css/front/mattributedetails.css
+++ b/views/css/front/mattributedetails.css
@@ -1,4 +1,8 @@
 .attribute-details {
+    animation: fade 1s both;
+}
+
+.attribute-details__wrapper {
     background: white;
     border-radius: 3px;
     box-shadow: 0 3px 20px rgba(0,0,0,.1);
@@ -8,4 +12,16 @@
     font-size: 18px;
     text-align: center;
     padding: 15px;
+}
+
+@keyframes fade {
+    from {
+        opacity: 0;
+        transform: scale(.5);
+    }
+
+    top {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
